<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#B0E3EC"
    android:scrollbars="vertical"
    tools:context=".SignUpActivity">

<ImageView
    android:id="@+id/img"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:scaleType="centerCrop"
    android:src="@drawable/img_3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_to_continue"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
           />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        android:background="@drawable/cvs_bg"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_address"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mishraanushka121_gmail_com"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:background="@drawable/tv_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_8272b"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/tv_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_162138891"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:background="@drawable/tv_bg"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="#700909"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_can_contact_with"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:src="@drawable/fb"
            android:padding="5dp"
            android:scaleType="centerCrop"
/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:scaleType="centerCrop"
            android:padding="5dp"
            android:src="@drawable/apple" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/google" />
    </LinearLayout>

        <TextView
            android:id="@+id/sign_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/already_have_ann_account_signin"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>