<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#5AD0F2"
    android:scrollbars="vertical"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">


        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="@id/img"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                />

        </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cv_bg"
        android:padding="15dp"
        android:layout_marginTop="260dp"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_address"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="mishraanushka121@gmail.com"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:background="@drawable/tv_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="8272b$%%"
                android:padding="10dp"
                android:layout_marginTop="3dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/tv_bg"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:textColor="#E80C0C" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Remember me and keep me logging"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#700909"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_can_contact_with"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:src="@drawable/fb"
            android:padding="5dp"
            android:scaleType="centerCrop"
/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:scaleType="centerCrop"
            android:padding="5dp"
            android:src="@drawable/apple"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/google"
            />
    </LinearLayout>

        <TextView
            android:id="@+id/reg_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/dont_t_have_account_sign_up_here"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center"

            />
            </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>